--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "chart": "^0.1.2",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -18,6 +19,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "chart.js": "^3.6.2",
     "d3": "^7.0.0",
     "d3-3d": "^0.1.2",
     "d3-delaunay": "^6.0.2",
