--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
+    "cm-chessboard": "^3.16.3",
     "d3": "^7.0.0",
     "d3-3d": "^0.1.2",
     "d3-delaunay": "^6.0.2",
