--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
+    "chessboardjs": "0.0.1",
     "cm-chessboard": "^3.16.3",
     "d3": "^7.0.0",
     "d3-3d": "^0.1.2",
